Q-0.9.0d80
[fix] tools: localizationStringsUpdate: semicolon
[fix] cocoaControl.strings
[fix] pl.lproj converted to Q localization guidelines

Q-0.9.0d79
[new] updatePC: convert Image to qcow2 and/or compress it
[new] tools: localizationStringsUpdate error checking
[new] tools: localizationStringsUpdate --help

Q-0.9.0d78
[new] tools: localizationStringsUpdate
[new] update_localization.sh scrip
[new] editPC added -smp option

Q-0.9.0d77
[fix] build_ppc.sh MACOSX_DEPLOYMENT_TARGET set to 10.3 for ppc (aka panther bug)
[fix] build_ppc.sh/build_i386.sh --target-list updated
[fix] NewPCAssistant: Live CD

Q-0.9.0d76
[fix] preferences: log output to console
[fix] Localization: nibs fixes/German

Q-0.9.0d75
[fix] Export/Import Guest PC Menu Item
[fix] Exported Guest PCs have no Dock Icon

Q-0.9.0d74
[fix] Localization: nibs 5

Q-0.9.0d73
[new] qemu support for multiple selectable bootdevices

Q-0.9.0d72
[fix] Update Changelog :)

Q-0.9.0d71
[fix] Localization: nibs 4

Q-0.9.0d70
[fix] Localization: nibs 3

Q-0.9.0d69
[fix] Localization: nibs 2

Q-0.9.0d68
[fix] Localization: nibs 1

Q-0.9.0d67
[new] Localization: German by cordney* and Mike
[new] Localization: French by Catios
[fix] Localization: Polish put into .string files
[fix] .nibs, standardized for translation
[new] q Makefile automatically generate nibs for optional Languages

Q-0.9.0d66
[revert] NewPCAssistant: default boot from CD-Rom for Win9x - Vista

Q-0.9.0d65
[new] preferences: log output to console (debugging)
[new] import Guest PCs from FlashDrive (standalone binary)
[new] export Guest PCs to FlashDrive (standalone binary) 
[fix] added license to FSControls
[new] drag and drop diskimages on Q Control (Live CD mode)
[fix] NewPCAssistant: default boot from CD-Rom for Win9x - Vista
[fix] using no Harddisk at all created a new one once the PC was edited again

Q-0.9.0d64
[fix] somewhat smarter update check :)
[fix] license updates

Q-0.9.0d63
[fix] license updates
[fix] copyright updates