@@ -1,3 +1,8 @@
+Q-0.9.0d81
+[fix] "#define kju_debug 1" for verbous log messages (txs Andreas F for suggestion)
+[fix] added openbios-sparc32 to sparc package (txs Andreas F)
+[fix] simplyfied "make install" (txs Andreas F for suggestion)
+
 Q-0.9.0d80
 [fix] tools: localizationStringsUpdate: semicolon
 [fix] cocoaControl.strings
